# django_blog

./: README.md  db.sqlite3  fire.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/templates/: base.html  create_post.html  post_detail.html  posts.html
blog/templates/registration/: logged_out.html  sign_up.html  signup_success.html  wait_for_email.html
django_blog/: settings.py  urls.py
