[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["serhiilikh <serhii.likh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "=3.0"
asgiref = "=3.2.3"
django-ckeditor = "=5.8.0"
django-js-asset = "=1.2.2"
pika = "=1.1.0"
pip = "^19.0.3"
pytz = "=2019.3"
setuptools = "=40.8.0"
sqlparse = "=0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
